Added font-awesome library

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <title>Beginner Bootstrap Template</title>
     <!-- Bootstrap's CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome CSS -->
+    <link href="css/font-awesome.min.css" rel="stylesheet">
     <!-- Your other CSS starts here -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- Your other CSS Ends here -->
