Added default Jumbotron with text and fa-icon

--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
 	<!-- Your other CSS Ends here -->
 </head>
 <body>
-	<h1>Hello Bootstrap !!!</h1>
+	<header>
+		<div class="jumbotron">
+			<div class="container">
+				<h1>Bootstrap Template</h1>
+				<i class="fa fa-tachometer fa-5x pull-right" aria-hidden="true"></i>
+				<hr>
+				<p>Beginner Bootstrap Template</p>
+			</div>
+		</div>
+	</header>
 	
 
 
