--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 	<header>
 		<div class="jumbotron">
 			<div class="container">
-				<h1>Bootstrap Template</h1>
-				<i class="fa fa-tachometer fa-5x pull-right" aria-hidden="true"></i>
+				<h1>Bootstrap Template<i class="fa fa-tachometer fa-2x pull-right" aria-hidden="true"></i></h1>
 				<hr>
 				<p>Beginner Bootstrap Template</p>
 			</div>
