Added a JavaScript file

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<!-- Bootstrap's Javascript -->
 	<script src="js/bootstrap.min.js"></script>
 	<!-- Your Javascript Starts here -->
-
+	<script src="js/script.js"></script>
 	<!-- Your Javascript Ends here -->
 </body>
 </html>
